@@ -1,10 +1,14 @@
 <?php
 /**
  * This file was created by Translation Editor v2.0
- * On 2014-08-06 16:52
+ * On 2015-01-28 13:13
  */
 
-$language = array (
+return array (
+  'html_email_handler:settings:embed_images' => 'Afbeeldingen embedden in de e-mail',
+  'html_email_handler:settings:embed_images:subtext' => 'Als dit is ingeschakeld worden alle afbeeldingen base64 encoded opgenomen in de e-mails.',
+  'html_email_handler:settings:proxy_host' => 'Poxy host om afbeeldingen te embedden',
+  'html_email_handler:settings:proxy_port' => 'Poxy poortnummer om afbeeldingen te embedden',
   'html_email_handler:settings:limit_subject' => 'Beperk de maximale lengte van het e-mail onderwerp',
   'html_email_handler:settings:limit_subject:subtext' => 'Schakel deze optie in indien gebruikers melden dat ze onleesbare onderwerpen in hun e-mail client zien (voornamelijk Outlook). Dit kan er potentieel voor zorgen dat er informatie verloren gaat in het onderwerp.',
   'html_email_handler' => 'HTML E-mail handler',
@@ -16,4 +20,3 @@ $language = array (
   'html_email_handler:settings:sendmail_options:description' => 'Hier kun je additionele parameters instellen voor sendmail, bijvoorbeeld -f % (om ervoor te zorgen dat e-mails minder snel worden gemarkeerd als spam)',
   'html_email_handler:notification:footer:settings' => 'Configureer je notificatie instellingen %shier%s',
 );
-add_translation("nl", $language);
